--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
         <img class="logo" src="./image/logo.svg" alt="logo" />
         <div class="navigation">
           <div class="nav">
-            <a class="header" href="#">О нас</a>
-            <a class="header" href="#">Проекты</a>
-            <a class="header" href="#">Материалы</a>
-            <a class="header" href="#">Отзывы</a>
+            <a class="header" href="#" target="_blank">О нас</a>
+            <a class="header" href="#" target="_blank">Проекты</a>
+            <a class="header" href="#" target="_blank">Материалы</a>
+            <a class="header" href="#" target="_blank">Отзывы</a>
           </div>
           <a class="telephone" href="tel:+79999999">+7 999 99 99</a>
         </div>
@@ -37,6 +37,7 @@
               </p>
               <img
                 class="sofa"
+                src="./image/sofa.webp"
                 srcset="./image/sofa.webp 1x, ./src/image/sofa@2x.webp 2x"
                 alt="sofa"
               />
@@ -204,6 +205,78 @@
           </div>
         </div>
       </section>
+      <!--Reviews-->
+      <section class="container container_rewies">
+        <h2>Отзывы</h2>
+        <div class="reviews_wrapper">
+          <!--Article 1-->
+          <article class="review">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="40"
+              height="40"
+              viewBox="0 0 40 40"
+              fill="none"
+            >
+              <path
+                d="M16.6383 5V17.3183C16.6383 26.825 10.42 33.2683 1.66667 35L0.00833333 31.415C4.06167 29.8867 6.66667 25.3517 6.66667 21.6667H0V5H16.6383ZM40 5V17.3183C40 26.825 33.7533 33.27 25 35L23.34 31.415C27.395 29.8867 30 25.3517 30 21.6667H23.3617V5H40Z"
+                fill="#212529"
+              />
+            </svg>
+            <span class="surname"> Игорь Антонов </span>
+            <p class="review_descr">
+              Обратилась к&nbsp;Aveji по&nbsp;рекомендации. Команда сразу
+              поняла, какой дизайн я&nbsp;хочу. Предоставили несколько вариантов
+              и&nbsp;в&nbsp;течение недели сделали наброски. Итог понравился,
+              все на&nbsp;высшем уровне.
+            </p>
+          </article>
+          <!--Article 2-->
+          <article class="review">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="40"
+              height="40"
+              viewBox="0 0 40 40"
+              fill="none"
+            >
+              <path
+                d="M16.6383 5V17.3183C16.6383 26.825 10.42 33.2683 1.66667 35L0.00833333 31.415C4.06167 29.8867 6.66667 25.3517 6.66667 21.6667H0V5H16.6383ZM40 5V17.3183C40 26.825 33.7533 33.27 25 35L23.34 31.415C27.395 29.8867 30 25.3517 30 21.6667H23.3617V5H40Z"
+                fill="#212529"
+              />
+            </svg>
+            <span class="surname"> Ольга Иванова </span>
+            <p class="review_descr">
+              После пары заказов у&nbsp;компании Aveji убедилась, что
+              за&nbsp;мебелью теперь только к&nbsp;ним. Абсолютно любые решения,
+              в&nbsp;любых размерах и&nbsp;форм-факторе, то&nbsp;что нужно!
+            </p>
+          </article>
+          <!--Article 3-->
+          <article class="review">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="40"
+              height="40"
+              viewBox="0 0 40 40"
+              fill="none"
+            >
+              <path
+                d="M16.6383 5V17.3183C16.6383 26.825 10.42 33.2683 1.66667 35L0.00833333 31.415C4.06167 29.8867 6.66667 25.3517 6.66667 21.6667H0V5H16.6383ZM40 5V17.3183C40 26.825 33.7533 33.27 25 35L23.34 31.415C27.395 29.8867 30 25.3517 30 21.6667H23.3617V5H40Z"
+                fill="#212529"
+              />
+            </svg>
+            <span class="surname"> Аркадий Макаров </span>
+            <p class="review_descr">
+              Aveji&nbsp;— настоящие профессионалы своего дела. Быстро поняли
+              мою задумку, сделали дизайн, согласовали и&nbsp;изготовили мебель.
+              А&nbsp;потом еще и&nbsp;бесплатно все собрали на&nbsp;месте.
+              Большое спасибо!
+            </p>
+          </article>
+        </div>
+      </section>
+      <!--Forms-->
       <section class="forms">
         <div class="container container_forms">
           <img
@@ -225,7 +298,7 @@
               />
             </form>
             <div class="link_buttons">
-              <a>
+              <a href="#">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   width="121"
@@ -329,7 +402,7 @@
                   </defs>
                 </svg>
               </a>
-              <a>
+              <a href="#">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   width="121"
@@ -415,77 +488,6 @@
               </a>
             </div>
           </div>
-        </div>
-      </section>
-      <!--Reviews-->
-      <section class="container container_rewies">
-        <h2>Отзывы</h2>
-        <div class="reviews_wrapper">
-          <!--Article 1-->
-          <article class="review">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              width="40"
-              height="40"
-              viewBox="0 0 40 40"
-              fill="none"
-            >
-              <path
-                d="M16.6383 5V17.3183C16.6383 26.825 10.42 33.2683 1.66667 35L0.00833333 31.415C4.06167 29.8867 6.66667 25.3517 6.66667 21.6667H0V5H16.6383ZM40 5V17.3183C40 26.825 33.7533 33.27 25 35L23.34 31.415C27.395 29.8867 30 25.3517 30 21.6667H23.3617V5H40Z"
-                fill="#212529"
-              />
-            </svg>
-            <span class="surname"> Игорь Антонов </span>
-            <p class="review_descr">
-              Обратилась к&nbsp;Aveji по&nbsp;рекомендации. Команда сразу
-              поняла, какой дизайн я&nbsp;хочу. Предоставили несколько вариантов
-              и&nbsp;в&nbsp;течение недели сделали наброски. Итог понравился,
-              все на&nbsp;высшем уровне.
-            </p>
-          </article>
-          <!--Article 2-->
-          <article class="review">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              width="40"
-              height="40"
-              viewBox="0 0 40 40"
-              fill="none"
-            >
-              <path
-                d="M16.6383 5V17.3183C16.6383 26.825 10.42 33.2683 1.66667 35L0.00833333 31.415C4.06167 29.8867 6.66667 25.3517 6.66667 21.6667H0V5H16.6383ZM40 5V17.3183C40 26.825 33.7533 33.27 25 35L23.34 31.415C27.395 29.8867 30 25.3517 30 21.6667H23.3617V5H40Z"
-                fill="#212529"
-              />
-            </svg>
-            <span class="surname"> Ольга Иванова </span>
-            <p class="review_descr">
-              После пары заказов у&nbsp;компании Aveji убедилась, что
-              за&nbsp;мебелью теперь только к&nbsp;ним. Абсолютно любые решения,
-              в&nbsp;любых размерах и&nbsp;форм-факторе, то&nbsp;что нужно!
-            </p>
-          </article>
-          <!--Article 3-->
-          <article class="review">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              width="40"
-              height="40"
-              viewBox="0 0 40 40"
-              fill="none"
-            >
-              <path
-                d="M16.6383 5V17.3183C16.6383 26.825 10.42 33.2683 1.66667 35L0.00833333 31.415C4.06167 29.8867 6.66667 25.3517 6.66667 21.6667H0V5H16.6383ZM40 5V17.3183C40 26.825 33.7533 33.27 25 35L23.34 31.415C27.395 29.8867 30 25.3517 30 21.6667H23.3617V5H40Z"
-                fill="#212529"
-              />
-            </svg>
-            <span class="surname"> Аркадий Макаров </span>
-            <p class="review_descr">
-              Aveji&nbsp;— настоящие профессионалы своего дела. Быстро поняли
-              мою задумку, сделали дизайн, согласовали и&nbsp;изготовили мебель.
-              А&nbsp;потом еще и&nbsp;бесплатно все собрали на&nbsp;месте.
-              Большое спасибо!
-            </p>
-          </article>
         </div>
       </section>
     </main>
