--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Furniture project</title>
     <link rel="stylesheet" href="./src/style/style.css" />
   </head>
   <body>
@@ -162,6 +162,34 @@
                   srcset="./image/tv.webp 1x, ./src/image/tv@2x.webp 2x"
                   alt="TV"
                 />
+                <a class="link_info" href="#">
+                <div class="info">
+                  <p class="info_text">Тумба под телевизор</p>
+                  <svg class="info_icon"
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="13"
+                    height="13"
+                    viewBox="0 0 13 13"
+                    fill="none"
+                  >
+                    <line
+                      x1="11.8684"
+                      y1="2.18556e-08"
+                      x2="11.8684"
+                      y2="12"
+                      stroke="white"
+                    />
+                    <line x1="12" y1="0.5" y2="0.5" stroke="white" />
+                    <line
+                      x1="11.722"
+                      y1="0.985145"
+                      x2="0.985134"
+                      y2="11.722"
+                      stroke="white"
+                    />
+                  </svg>
+                </div>
+              </a>
               </article>
               <article class="projects_images">
                 <img
@@ -171,12 +199,68 @@
                   "
                   alt="kitchen"
                 />
+                <a class="link_info" href="#">
+                <div class="info">
+                  <p class="info_text">Кухонный гарнитур</p>
+                  <svg class="info_icon"
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="13"
+                    height="13"
+                    viewBox="0 0 13 13"
+                    fill="none"
+                  >
+                    <line
+                      x1="11.8684"
+                      y1="2.18556e-08"
+                      x2="11.8684"
+                      y2="12"
+                      stroke="white"
+                    />
+                    <line x1="12" y1="0.5" y2="0.5" stroke="white" />
+                    <line
+                      x1="11.722"
+                      y1="0.985145"
+                      x2="0.985134"
+                      y2="11.722"
+                      stroke="white"
+                    />
+                  </svg>
+                </div>
+              </a>
               </article>
               <article class="projects_images">
                 <img
                   srcset="./image/chair.webp 1x, ./src/image/chair@2x.webp 2x"
                   alt="chair"
                 />
+                <a class="link_info" href="#">
+                <div class="info">
+                  <p class="info_text">Кресло для гостиной</p>
+                  <svg class="info_icon"
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="13"
+                    height="13"
+                    viewBox="0 0 13 13"
+                    fill="none"
+                  >
+                    <line
+                      x1="11.8684"
+                      y1="2.18556e-08"
+                      x2="11.8684"
+                      y2="12"
+                      stroke="white"
+                    />
+                    <line x1="12" y1="0.5" y2="0.5" stroke="white" />
+                    <line
+                      x1="11.722"
+                      y1="0.985145"
+                      x2="0.985134"
+                      y2="11.722"
+                      stroke="white"
+                    />
+                  </svg>
+                </div>
+              </a>
               </article>
             </div>
             <div class="projects_down">
@@ -188,18 +272,102 @@
                   "
                   alt="wardrope"
                 />
+                <a class="link_info" href="#">
+                <div class="info">
+                  <p class="info_text">Мебель в прихожую</p>
+                  <svg class="info_icon"
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="13"
+                    height="13"
+                    viewBox="0 0 13 13"
+                    fill="none"
+                  >
+                    <line
+                      x1="11.8684"
+                      y1="2.18556e-08"
+                      x2="11.8684"
+                      y2="12"
+                      stroke="white"
+                    />
+                    <line x1="12" y1="0.5" y2="0.5" stroke="white" />
+                    <line
+                      x1="11.722"
+                      y1="0.985145"
+                      x2="0.985134"
+                      y2="11.722"
+                      stroke="white"
+                    />
+                  </svg>
+                </div>
+              </a>
               </article>
               <article class="projects_images">
                 <img
                   srcset="./image/bed.webp 1x, ./src/image/bed@2x.webp 2x"
                   alt="bed"
                 />
+                <a class="link_info" href="#">
+                <div class="info">
+                  <p class="info_text">Кровать в спальню</p>
+                  <svg class="info_icon"
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="13"
+                    height="13"
+                    viewBox="0 0 13 13"
+                    fill="none"
+                  >
+                    <line
+                      x1="11.8684"
+                      y1="2.18556e-08"
+                      x2="11.8684"
+                      y2="12"
+                      stroke="white"
+                    />
+                    <line x1="12" y1="0.5" y2="0.5" stroke="white" />
+                    <line
+                      x1="11.722"
+                      y1="0.985145"
+                      x2="0.985134"
+                      y2="11.722"
+                      stroke="white"
+                    />
+                  </svg>
+                </div>
+              </a>
               </article>
               <article class="projects_images">
                 <img
                   srcset="./image/chest.webp 1x, ./src/image/chest@2x.webp 2x"
                   alt="chest"
                 />
+                <a class="link_info" href="#">
+                <div class="info">
+                  <p class="info_text">Комод в спальню</p>
+                  <svg class="info_icon"
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="13"
+                    height="13"
+                    viewBox="0 0 13 13"
+                    fill="none"
+                  >
+                    <line
+                      x1="11.8684"
+                      y1="2.18556e-08"
+                      x2="11.8684"
+                      y2="12"
+                      stroke="white"
+                    />
+                    <line x1="12" y1="0.5" y2="0.5" stroke="white" />
+                    <line
+                      x1="11.722"
+                      y1="0.985145"
+                      x2="0.985134"
+                      y2="11.722"
+                      stroke="white"
+                    />
+                  </svg>
+                </div>
+              </a>
               </article>
             </div>
           </div>
